# velocitybench

./: .coveragerc  .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .test-suite-expansion-status.md  BENCHMARK_CLARITY_PLAN.md  BENCHMARK_DOMAIN_ARCHITECTURE.md  BENCHMARK_METHODOLOGY.md  BLOG_COMMANDS_CHEATSHEET.md  BLOG_GENERATION_SUMMARY.md  BRANCH_SUMMARY.md  CAPABILITY_FOCUSED_BLOG_CONTENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  COST_SIMULATION_DESIGN.md  COST_SIMULATION_IMPLEMENTATION_STATUS.md  COST_SIMULATION_INDEX.md  COST_SIMULATION_MONOREPO_STRUCTURE.md  COST_SIMULATION_REVISED_ROADMAP.md  COST_SIMULATION_SUMMARY.md  DATASET_SCALING_SAFETY_CHECKS.md  DESIGN_REVIEW_GUIDE.md  DEVELOPMENT.md  DYNAMIC_DATASET_SCALING_PLAN.md  FRAISEQL_YAML_ENRICHMENT.md  FRAMEWORKS.md  LICENSE  MAKEFILE_QUICK_REFERENCE.txt  MAKEFILE_USAGE.md  MANUAL_QA_CHECKLIST.md  Makefile  PHASE3A_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  POSTGRAPHILE_TEST_STATUS.md  QA_REPORT.md  QUICK_START.md  (+17 more)
database/: .dockerignore  .gitignore  01-extensions.sql  02-schema.sql  03-data.sql  04-cqrs-extensions.sql  04-seed-extension.sql  05-large-dataset.sql  05-medium-seed.sql  06-fulltext-indexes.sql  Dockerfile  README.md  concatenate-databases.py  database-sampler.py  fraiseql_cqrs_schema.sql  fraiseql_mutations.sql  generate-all-variations.sh  import-all-variations.py  import-to-postgresql.py  import-xs-to-pg.py  incremental-generator.py  optimized-generator.py  pyproject.toml  schema-sqlite-xs.sql  schema-template.sql  seed-generator.py  setup.py  sqlite-to-postgres-import.py  v_views.sql  validate-all-variations.py  validate-databases.py  validate-xs.py  xs-generator.py  xxlarge-generator.py
database/pg_tviews/: CHANGELOG.md  Cargo.toml
database/pg_tviews/src/: event_trigger.rs  hooks.rs  lib.rs  propagate.rs  trigger.rs  utils.rs
database/pg_tviews/src/ddl/: create.rs  mod.rs
database/pg_tviews/src/dependency/: graph.rs  triggers.rs
database/pg_tviews/src/queue/: mod.rs  ops.rs  state.rs  xact.rs
database/pg_tviews/src/refresh/: cache.rs  main.rs  mod.rs
database/seed-data/: README.md  output
database/seed-data/generator/: analyze_comments.py  bulk_loader.py  config.yaml  correct_personas.py  data_validator.py  database_safety_checker.py  disk_space_checker.py  exceptions.py  fix_blog_posts.py  generate_blog_comments.py  generate_blog_parallel.py  generate_blog_prompt.py  generate_blog_vllm.py  generate_blogs_with_opencode.sh  generate_comment_replies.py  generate_patterns_bulk.py  generate_patterns_extensive.py  generate_personas.py  generate_sql.py  load_blog_posts.py  load_comments_to_db.py  logger_config.py  markdown_parser.py  matrix.yaml  persona_schema.json  resource_monitor.py  scale_dataset.py  validate_blog_comments.py  validate_personas.py  variant_generator.py
database/seed-data/prompts/: blog-comparison.md  blog-tutorial.md
fraiseql-server/: Cargo.toml
fraiseql-server/src/: main.rs
frameworks/actix-web-rest/: .dockerignore  Cargo.toml  Dockerfile  README.md
frameworks/actix-web-rest/src/: db.rs  error.rs  handlers.rs  main.rs  metrics.rs  models.rs  repositories.rs
frameworks/actix-web-rest/tests/: endpoints_test.rs  error_edge_cases_test.rs  mutations_test.rs  security_auth_test.rs  security_injection_test.rs  security_rate_limit_test.rs  test_helpers.rs
frameworks/async-graphql/: .dockerignore  .env.test  Cargo.toml  Dockerfile  README.md
frameworks/async-graphql/database/: extensions.sql
frameworks/async-graphql/src/: dataloaders.rs  db.rs  main.rs  models.rs  schema.rs
frameworks/async-graphql/tests/: error_scenarios_test.rs  security_auth_test.rs  security_injection_test.rs  security_rate_limit_test.rs
frameworks/fastapi-rest/: Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
frameworks/fastapi-rest/common/: async_db.py  errors.py  health_check.py  logging_middleware.py  validators.py
frameworks/fastapi-rest/tests/: conftest.py  test_endpoints.py  test_error_scenarios.py  test_integration.py  test_mutations.py  test_security_injection.py  test_security_integrity.py  test_security_validation.py
frameworks/flask-rest/: Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
frameworks/flask-rest/tests/: conftest.py  test_api.py  test_endpoints.py  test_error_scenarios.py  test_mutations.py  test_schema.py  test_security_injection.py  test_security_integrity.py  test_security_validation.py
frameworks/fraiseql/: Dockerfile  FRAISEQL_ARCHITECTURE.md  README.md  __init__.py  fraiseql-tv-audit.toml  fraiseql-tv-nocache.toml  fraiseql-tv.toml  fraiseql.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.py  schema_tv.py
frameworks/fraiseql/database/: extensions.sql  schema.sql
frameworks/fraiseql/tests/: __init__.py  conftest.py  test_fraiseql_integration.py  test_perf_simple_queries.py  test_resolvers.py  test_security_injection.py  test_security_integrity.py  test_security_validation.py
frameworks/juniper/: .dockerignore  .env.example  .env.test  Cargo.toml  Dockerfile  README.md
frameworks/juniper/database/: extensions.sql
frameworks/juniper/src/: db.rs  loaders.rs  main.rs  models.rs  schema.rs
frameworks/juniper/tests/: mutations_test.rs  queries_test.rs  resolver_test.rs  security_auth_test.rs  security_injection_test.rs  security_rate_limit_test.rs  test_helpers.rs
frameworks/shared/rust/: Cargo.toml  README.md
frameworks/strawberry/: .env.test  Dockerfile  ENHANCED_TEST_SUITE_SUMMARY.md  MODERNIZATION_CHANGES.md  PR_SUMMARY.md  README.md  main.py  main_sqlalchemy.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
frameworks/strawberry/common/: async_db.py
frameworks/strawberry/database/: extensions.sql
frameworks/strawberry/tests/: conftest.py  test_error_scenarios.py  test_mutations.py  test_resolvers.py  test_schema.py  test_security_injection.py  test_security_integrity.py  test_security_validation.py
(+12233 files in other folders)
