[project]
name = "velocitybench-database"
version = "0.1.0"
description = "Database setup and seed data generators for VelocityBench"
requires-python = ">=3.10"
dependencies = [
    "faker>=28.0.0",
    "psycopg>=3.2.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
