[project]
name = "velocitybench-database"
version = "0.1.0"
description = "Database setup and seed data generators for VelocityBench"
requires-python = ">=3.10"
dependencies = [
    "faker>=28.0.0",
    "psycopg>=3.2.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # Ruff-specific
    "PERF",   # perflint
    "FURB",   # refurb
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # Magic values OK in tests

[tool.ty]
python-version = "3.10"
