[package]
name = "actix-web-rest"
version = "0.1.0"
edition = "2021"
authors = ["FraiseQL Performance Assessment"]
description = "High-performance REST API in Rust using Actix-web framework"
license = "MIT"
repository = "https://github.com/fraiseql/performance-assessment"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid"] }
deadpool-postgres = "0.14"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
thiserror = "1.0"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
