[package]
name = "async-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
async-graphql = { version = "7.0", features = ["dataloader"] }
async-graphql-actix-web = "7.0"
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid"] }
deadpool-postgres = "0.14"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-chrono-0_4"] }
thiserror = "1.0"
futures = "0.3"
