[project]
name = "fastapi-rest"
version = "0.1.0"
description = "FastAPI REST Comparative Benchmarking Implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "asyncpg==0.29.0",
    "pydantic==2.5.0",
    "prometheus-client==0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]