[project]
name = "fastapi-rest"
version = "0.1.0"
description = "FastAPI REST Comparative Benchmarking Implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "asyncpg==0.29.0",
    "pydantic==2.12.5",
    "prometheus-client==0.19.0",
    "psutil==5.9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # Ruff-specific
    "PERF",   # perflint
    "FURB",   # refurb
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # Magic values OK in tests

[tool.ty]
python-version = "3.11"