[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fraiseql-benchmark"
version = "1.0.0"
description = "FraiseQL benchmarking framework for VelocityBench"
authors = [{name = "VelocityBench"}]
requires-python = ">=3.12"

dependencies = [
    "fraiseql>=2.0.0",        # FraiseQL Python SDK for schema authoring
    "requests>=2.31.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "psutil>=5.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "benchmark: performance benchmarking tests",
    "integration: integration tests requiring database",
    "slow: slow running tests",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PERF",   # perflint
]
ignore = []
