[package]
name = "juniper-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# GraphQL
juniper = "0.16"
juniper_actix = "0.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-chrono-0_4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
